--- a/docs/tex/3-przeglad-narzedzi.tex
+++ b/docs/tex/3-przeglad-narzedzi.tex
@@ -16,9 +16,7 @@ Wybrane do badania modele komercyjne to:
 
 \begin{itemize}
     \item \textbf{OpenAI GPT-5 Mini} \cite{gpt5mini}
-    \item \textbf{Anthropic Claude Haiku 4.5} \cite{claude_haiku45}
     \item \textbf{Google Gemini 2.5 Flash} \cite{gemini25_flash}
-    \item \textbf{xAI Grok 4.1 Fast} \cite{grok41_fast}
 \end{itemize}
 
 Modele open-source stanowią atrakcyjną alternatywę, oferując pełną kontrolę, możliwość uruchomienia na własnej infrastrukturze oraz brak dodatkowych opłat za każde zapytanie. Ich wydajność zależy przede wszystkim od dostępności zasobów sprzętowych, a aktywny rozwój społeczności przyczynia się do ciągłej optymalizacji i pojawiania się coraz bardziej zaawansowanych wersji.
@@ -26,9 +24,7 @@ Modele open-source stanowią atrakcyjną alternatywę, oferując pełną kontrol
 Wybrane do badania modele open-source to:
 
 \begin{itemize}
-    \item \textbf{DeepSeek V3.2} \cite{deepseek_v32}
-    \item \textbf{GLM 4.6} \cite{glm46}
-    \item \textbf{Qwen3 Next 80B A3B Thinking} \cite{qwen3_next_80b_a3b_thinking}
+    \item \textbf{DeepSeek-Chat (V3.2)} \cite{deepseek_v32}
 \end{itemize}
 
 Wszystkie wymienione modele reprezentują aktualny szczyt osiągnięć w dziedzinie dużych modeli językowych. Wybrane zostały przede wszystkim ze względu na ich potwierdzone zdolności do generowania wysokiej jakości kodu oraz wsparcie dla funkcji \textit{tool calling}. Funkcje te umożliwiają bezpośrednią integrację modeli z zewnętrznymi narzędziami lub usługami poprzez dedykowane mechanizmy API bądź platformy agentowe, takie jak LangChain \cite{langchain} czy LangGraph \cite{langgraph}. W proponowanym w tej pracy podejściu, funkcje \textit{tool calling} będą odgrywać znaczącą rolę w zarządzaniu kontekstem i procesie generowania konfiguracji.
@@ -51,7 +47,7 @@ W ramach niniejszego badania modele językowe są wykorzystywane w trybie infere
 
 Integracja z wybranymi modelami LLM odbywa się głównie za pośrednictwem ich bezpośrednich interfejsów programistycznych (API). Takie podejście gwarantuje dostęp do najnowszych wersji modeli, pełną kontrolę nad parametrami zapytania oraz optymalne czasy odpowiedzi. Należy jednak pamiętać o potencjalnych ograniczeniach wynikających z limitów API oraz braku możliwości bezpośredniej modyfikacji wewnętrznej architektury lub kodu źródłowego w przypadku zamkniętych modeli komercyjnych.
 
-Warto zaznaczyć, że chociaż inferencję dla wielu modeli open-source (takich jak te z serii LLaMA czy Mistral) można przeprowadzać lokalnie, wymaga to znacznych zasobów sprzętowych (zwłaszcza mocnego procesora graficznego - GPU). Ze względu na ograniczenia sprzętowe środowiska eksperymentalnego, w niniejszej pracy nie zastosowano lokalnej inferencji. Zamiast tego, dla modeli komercyjnych korzystano z ich dedykowanych API, natomiast dla modeli open-source, które nie oferują własnego API, wykorzystana została platforma OpenRouter \cite{openrouter}, która agreguje dostęp do wielu modeli od różnych dostawców, oferując ujednolicony interfejs.
+Warto zaznaczyć, że chociaż inferencję dla wielu modeli open-source (takich jak te z serii LLaMA czy Mistral) można przeprowadzać lokalnie, wymaga to znacznych zasobów sprzętowych (zwłaszcza mocnego procesora graficznego - GPU). Ze względu na ograniczenia sprzętowe środowiska eksperymentalnego, w niniejszej pracy nie zastosowano lokalnej inferencji. Zamiast tego, dla modeli komercyjnych oraz DeepSeek korzystano z ich dedykowanych API, natomiast dla pozostałych modeli open-source, które nie oferują własnego API, wykorzystana została platforma OpenRouter \cite{openrouter}, która agreguje dostęp do wielu modeli od różnych dostawców, oferując ujednolicony interfejs.
 
 \subsection{Tryby promptowania}
 
@@ -156,7 +152,7 @@ Cała logika sterowania eksperymentami, w tym implementacja agentów, wywoływan
 Interakcje z modelami LLM odbywały się za pośrednictwem dwóch głównych ścieżek:
 \begin{itemize}
 	\item \textbf{Bezpośrednie API:} W przypadku modeli komercyjnych, które oferują własne dedykowane API (np. OpenAI GPT-4, Google Gemini Pro, Anthropic Claude), korzystano z ich natywnych interfejsów programistycznych.
-	\item \textbf{OpenRouter:} Dla modeli open-source (np. Mistral, Meta Llama, DeepSeek), które często nie posiadają własnych komercyjnych API lub ich infrastruktura do hostingu jest zbyt kosztowna dla pojedynczego badacza, wykorzystano platformę \textbf{OpenRouter}. OpenRouter działa jako brama API (API Gateway), agregująca dostęp do wielu modeli od różnych dostawców za pośrednictwem ujednoliconego interfejsu API, co znacząco ułatwiało testowanie różnorodnych modeli bez konieczności integracji z wieloma odrębnymi API.
+	\item \textbf{OpenRouter:} Dla modeli open-source (np. Mistral, Meta Llama), które często nie posiadają własnych komercyjnych API lub ich infrastruktura do hostingu jest zbyt kosztowna dla pojedynczego badacza, wykorzystano platformę \textbf{OpenRouter}. OpenRouter działa jako brama API (API Gateway), agregująca dostęp do wielu modeli od różnych dostawców za pośrednictwem ujednoliconego interfejsu API, co znacząco ułatwiało testowanie różnorodnych modeli bez konieczności integracji z wieloma odrębnymi API.
 \end{itemize}
 
 W trakcie prowadzenia badań i eksperymentów wykorzystano również szereg narzędzi wspomagających, które były cenne dla efektywnego zarządzania procesem badawczym i analizą wyników:
