--- a/docs/tex/4-projekt-eksperymentow.tex
+++ b/docs/tex/4-projekt-eksperymentow.tex
@@ -173,6 +173,7 @@ Porównanie wyników między wariantami pozwoli określić, w jakim stopniu szcz
 
 \bigskip
 \noindent
+TODO ???
 Ze względu na koszt wywołań API oraz objętość danych, dla H1 przeprowadzane są 2 powtórzenia dla każdego repozytorium z trzema modelami faktycznie użytymi w eksperymencie (gemini-2.5-flash, gpt-5-mini, deepseek-chat) oraz oboma wariantami promptów.
 
 \subsubsection{Metryki}
